--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>E-Library</title>
+    <link rel="icon" href="./Images/book.png" />
+  </head>
 
-<head>
-  <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>E-Learning</title>
-  <link rel="icon" href="./Images/book.png">
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
